Adding window renaming persistence option

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,14 +41,16 @@ bind-key / command-prompt "split-window 'exec man %%'"
 # Allow automatic reloading
 bind-key R source-file ~/.tmux.conf
 
-# Rename window
+# Rename window binding
 bind-key n command-prompt "rename-window %%"
+# Stop Automatic rename when typing commands
+set-option -g allow-rename off
  
 ##################################
 # Graphics
 ##################################
 # Unactive panes in grey
-set -g pane-border-fg grey
+set -g pane-border-fg default
 set -g pane-border-bg default
  
 # Active panes in green 
