Set pane-border-fg default

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,7 +48,7 @@ bind-key n command-prompt "rename-window %%"
 # Graphics
 ##################################
 # Unactive panes in grey
-set -g pane-border-fg grey
+set -g pane-border-fg default 
 set -g pane-border-bg default
  
 # Active panes in green 
